bk_ida/gccida/c0/finalize
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finalize/src/toplev.c:5637:16: error: expected identifier or '('
 struct suffix = concat( seq, dump_file[i].extension, 0LL); 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finalize/src/toplev.c:5651:1: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_hooks_0.finish( ); 
^~~~~~~~~~~~
lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finalize/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finalize/src/obj/toplev.o] Error 1
